force-app/main/default/objects/Case_Assignment_Rule__mdt/Case_Assignment_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Case Assignment Rule</label>
    <pluralLabel>Case Assignment Rules</pluralLabel>
</CustomObject>