force-app/main/default/objects/Case_Assignment_Rule__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>