force-app/main/default/objects/Case_Assignment_Rule__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Text</type>
    <length>255</length>
</CustomField>