force-app/main/default/objects/Case_Assignment_Rule__mdt/fields/Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developer_Name__c</fullName>
    <label>Queue Developer Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>